Archive/78d293a1cbed2f8cb25e70d47934a7a8-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:9:27: error: expected type-specifier
     using argument_type = std::tuple<Args...>;
                           ^
main.cpp:13:18: error: expected type-specifier before 'uint32_t'
 using PlayerId = uint32_t;
                  ^
main.cpp:14:14: error: expected type-specifier
 using Name = std::string;
              ^
main.cpp:20:40: error: 'PlayerId' was not declared in this scope
 struct CreatePlayer : Command<PlayerId()> {};
                                        ^
main.cpp:20:41: error: template argument 1 is invalid
 struct CreatePlayer : Command<PlayerId()> {};
                                         ^
main.cpp:21:37: error: 'PlayerId' was not declared in this scope
 struct DestroyPlayer : Command<void(PlayerId)> {};
                                     ^
main.cpp:21:46: error: template argument 1 is invalid
 struct DestroyPlayer : Command<void(PlayerId)> {};
                                              ^
main.cpp:22:31: error: 'PlayerId' was not declared in this scope
 struct SetName : Command<void(PlayerId, Name)> {};
                               ^
main.cpp:22:41: error: 'Name' was not declared in this scope
 struct SetName : Command<void(PlayerId, Name)> {};
                                         ^
main.cpp:22:45: error: expression list treated as compound expression in functional cast [-fpermissive]
 struct SetName : Command<void(PlayerId, Name)> {};
                                             ^
main.cpp:22:46: error: template argument 1 is invalid
 struct SetName : Command<void(PlayerId, Name)> {};
                                              ^
